# YellowBoy

./: .gitignore  CMakeLists.txt  README.md
src/: audio.cpp  main.cpp  memory.cpp  video.cpp
